--- a/src/Busybee/TimeTableBundle/Resources/views/Columns/columnContent.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Columns/columnContent.html.twig
@@ -5,13 +5,28 @@
     {% set header = 'timetable.column.header.title' %}
     {% set h3Content = '<div class="collection-actions collection-panel">' %}
     {% set h3Content = h3Content ~ returnButton({'windowOpen': {'route': path('timetable_manage')}})|raw %}
-    {% set h3Content = h3Content ~ saveButton()|raw %}
+    {% set locked = false %}
+    {% if form.vars.data %}
+        {% set locked = form.vars.data.locked %}
+    {% endif %}
+    {% if locked %}
+        {% set h3Content = h3Content ~ saveButton({additional: 'disabled'})|raw %}
+    {% else %}
+        {% set h3Content = h3Content ~ saveButton()|raw %}
+    {% endif %}
     {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
     {% set h3Content = h3Content ~ '</div>' %}
     {% set title = 'timetable.column.add.title'|trans %}
     {% if col.vars.data is not empty %}{% set title = timetable.getFullName ~ ': ' ~ col.vars.data.name ~ ' (' ~ col.vars.data.nameShort ~ ')' %}{% endif %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'name': title, 'panelStyle': 'primary' } %}
     <div class="container-fluid">
+        {% if locked %}
+            <div class="row">
+                <div class="col-sm-12 alert alert-danger">
+                    {{ 'timetable.locked.true'|trans }}
+                </div>
+            </div>
+        {% endif %}
         <div class="row">
             <div class="col-sm-12 well">
                 {{ form_widget(col.periods, {'attr': {'class': 'periodList_' ~ name}, col_id: col.vars.value.id}) }}
