--- a/src/Busybee/TimeTableBundle/Resources/views/Columns/columnScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Columns/columnScript.html.twig
@@ -7,13 +7,16 @@
         {% if locked %}
         allow_up: false,
         allow_down: false,
+        add: '',
+        remove: '',
         {% else %}
         allow_up: true,
         allow_down: true,
-        {% endif %}
         add: '<button title="{{ 'timetable.column.add.title'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
         remove: '<button title="{{ 'timetable.column.remove.title'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true,
+        {% endif %}
+        hide_useless_buttons: true,
         before_remove: function (collection, element) {
             var source = $(element[0]).find('.ColumnIdentifier');
             var id = source.attr('column');
