--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/index.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/index.html.twig
@@ -39,7 +39,7 @@
 
     {{ form_widget(form.activities) }}
     <div>
-        {{ miscButton({'class': 'halflings halflings-list btn btn-info', windowOpen: {route: path('period_full_report', {'id': app.request.get('id')}), 'target': 'FullReport', params: 'width=500,height=650'}, 'title': 'period.report.full.button', transDomain: 'BusybeeTimeTableReport'})|raw }}
+        {{ miscButton({'class': 'halflings halflings-list btn btn-info', windowOpen: {route: path('period_full_report', {'id': app.request.get('id')}), 'target': 'FullReport', params: 'width=500,height=650'}, 'title': 'period.report.full.button', transDomain: 'BusybeeTimeTableBundle'})|raw }}
         {{ addButton({'title': 'period.plan.title.add', 'transDomain': 'BusybeeTimeTableBundle', 'class': 'halflings halflings-plus-sign btn btn-primary collection-action collection-rescue-add', 'additional': 'data-collection="tt_period_activity_activities"'})|raw }}
         {{ saveButton()|raw }}
         <span style="float: right;">&nbsp;</span>
