--- a/src/Busybee/TimeTableBundle/Resources/views/Days/dayCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Days/dayCollection.html.twig
@@ -11,7 +11,9 @@
         {% set header = 'timetable.column.header.title' %}
         {% set h3Content = '<div class="collection-actions collection-panel">' %}
         {% set h3Content = h3Content ~ deleteButton({'title': 'timetable.column.remove.title', 'transDomain': 'BusybeeTimeTableBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'})|raw %}
-        {% set h3Content = h3Content ~ saveButton()|raw %}
+        {% if not locked %}
+            {% set h3Content = h3Content ~ saveButton() %}
+        {% endif %}
         {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
         {% set h3Content = h3Content ~ upDownButton()|raw %}
         {% set h3Content = h3Content ~ '</div>' %}
