--- a/src/Busybee/TimeTableBundle/Resources/views/Days/dayScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Days/dayScript.html.twig
@@ -1,12 +1,18 @@
 {% trans_default_domain "BusybeeTimeTableBundle" %}
+{% set locked = form.locked.vars.data %}
 
 <script type="text/javascript">
     $(".dayList").collection({
         name_prefix: '{{ form.days.vars.full_name }}',
+        {% if locked %}
+        add: '',
+        remove: '',
+        {% else %}
+        add: '<button title="{{ 'timetable.column.add.title'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+        remove: '<button title="{{ 'timetable.column.remove.title'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+        add_at_the_end: true,
+        {% endif %}
         allow_up: false,
         allow_down: false,
-        add: '<button title="{{ 'timetable.day.add.title'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-        remove: '<button title="{{ 'timetable.day.remove.title'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
-        add_at_the_end: true,
     });
 </script>
