--- a/src/Busybee/TimeTableBundle/Resources/views/Periods/periodCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Periods/periodCollection.html.twig
@@ -15,10 +15,12 @@
         {% set h3Content = '<div class="collection-actions collection-panel">' %}
         {% set period_id = 0 %}
         {% if form.vars.data is not empty %}{% set period_id = form.vars.data.id %}{% endif %}
-        {% set canDelete = {'additional': 'disabled'} %}
+        {% set canDelete = {additional: 'disabled'} %}
         {% if form.vars.data is not empty and form.vars.data.canDelete() %}{% set canDelete = {} %}{% endif %}
-        {% set h3Content = h3Content ~ deleteButton({'title': 'timetable.period.remove.title', 'transDomain': 'BusybeeTimeTableBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}|merge(canDelete))|raw %}
-        {% set h3Content = h3Content ~ saveButton()|raw %}
+        {% if not locked %}
+            {% set h3Content = h3Content ~ deleteButton({'title': 'timetable.period.remove.title', 'transDomain': 'BusybeeTimeTableBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}|merge(canDelete))|raw %}
+            {% set h3Content = h3Content ~ saveButton() %}
+        {% endif %}
         {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
         {% set h3Content = h3Content ~ upDownButton()|raw %}
         {% if form.vars.value is not empty and form.vars.value.id > 0 %}
