--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
@@ -39,33 +39,7 @@
                                             {{ activity.fullName }}
                                         </div>
                                         <div class="col-sm-4 small{{ activity.status.class }}">
-                                            <p class="text-left">{% if activity.status.message is not empty %}
-                                                    {{ miscButton({'title': activity.status.message, 'class': 'halflings halflings-question-sign btn btn-sm btn-' ~ activity.status.alert,'style': 'float: right; padding: 4px;', 'windowOpen': {'route': path('period_plan_report', {'id': period.id}), 'target': 'PeriodReport', 'params': 'width=500,height=600'}})|raw }}
-                                                {% endif %}
-                                                {% set comma = false %}
-                                                {% if activity.details['space_id'] is defined and activity.details['space_id'] > 0 %}
-                                                    <span class="spaceName"
-                                                          onclick="openSpaceTimeTable({{ activity.details['space_id'] }})">{{ activity.details['%space%'] }}</span>
-                                                    {% set comma = true %}
-                                                {% endif %}
-                                                {% if activity.details['tutor1_id'] is defined and activity.details['tutor1_id'] > 0 %}
-                                                    {% if comma %},&nbsp;{% endif %}
-                                                    <span class="tutorName"
-                                                          onclick="openStaffTimeTable({{ activity.details['tutor1_id'] }})">{{ activity.details['%tutor1%'] }}</span>
-                                                    {% set comma = true %}
-                                                {% endif %}
-                                                {% if activity.details['tutor2_id'] is defined and activity.details['tutor2_id'] > 0 %}
-                                                    {% if comma %},&nbsp;{% endif %}
-                                                    <span class="tutorName"
-                                                          onclick="openStaffTimeTable({{ activity.details['tutor2_id'] }})">{{ activity.details['%tutor2%'] }}</span>
-                                                    {% set comma = true %}
-                                                {% endif %}
-                                                {% if activity.details['tutor3_id'] is defined and activity.details['tutor3_id'] > 0 %}
-                                                    {% if comma %},&nbsp;{% endif %}
-                                                    <span class="tutorName"
-                                                          onclick="openStaffTimeTable({{ activity.details['tutor3_id'] }})">{{ activity.details['%tutor3%'] }}</span>
-                                                {% endif %}
-                                            </p>
+                                            {% include '@BusybeeTimeTable/Periods/activityDetails.html.twig' with {id: period.id, details: activity.details, status: activity.status  } %}
                                         </div>
                                         <div class="col-sm-4">
                                             <div>
