--- a/src/Busybee/Core/CalendarBundle/Resources/views/Grade/grade.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Grade/grade.html.twig
@@ -1,11 +1,11 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% block grade_label %}{% endblock %}
 {% block grade_errors %}{% endblock %}
 
 {% block grade_widget %}
     {% spaceless %}
-        {% if form.grade.vars.value is empty %}{% set gradeTitle = 'year.add.title'|trans %}{% else %}{% set gradeTitle = array_flip(get_setting('student.groups'))[form.grade.vars.value] %}{% endif %}
+        {% if form.grade.vars.value is empty %}{% set gradeTitle = 'grade.add.title'|trans %}{% else %}{% set gradeTitle = array_flip(get_setting('student.groups'))[form.grade.vars.value] %}{% endif %}
         {% set h3Content = '<div class="collection-actions collection-panel">' %}
         {% set h3Content = h3Content ~ deleteButton({'title': 'grade.remove.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
         {% set h3Content = h3Content ~ saveButton({'name': 'grades'}) %}
@@ -16,6 +16,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 well">
+                    {{ dump() }}
                     {{ form_row(form.grade) }}
                     {{ form_row(form.sequence) }}
                     {{ form_row(form.year, {'value': app.request.get('id') }) }}
