--- a/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/calendarView.pdf.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/calendarView.pdf.twig
@@ -1,5 +1,5 @@
 {# src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.pdf.twig #}
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 <style>
     .days > td {
         border: 1px solid #333;
