--- a/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/yearCalendar.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/yearCalendar.html.twig
@@ -1,6 +1,6 @@
 {# src/Busybee/InstituteBundle/Resources/views/Calendar/yearCalendar.html.twig #}
 
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
