--- a/src/Busybee/Core/CalendarBundle/Resources/views/Grade/gradesScript.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Grade/gradesScript.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 <script type="text/javascript" language="JavaScript">
     $(".gradeList").collection({
