--- a/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDays.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDays.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% include 'BusybeeCalendarBundle:Calendar:calendarMenu.html.twig' with {'header': 'calendar.specialDay.title', 'name': form.name.vars.value, 'panelParagraph': 'calendar.help.specialDays'} %}
 	{{ form_widget(form.specialDays) }}
