--- a/src/Busybee/Core/CalendarBundle/Resources/views/Term/termScript.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Term/termScript.html.twig
@@ -13,8 +13,8 @@
         name_prefix: '{{ form.terms.vars.full_name }}',
         allow_up: false,
         allow_down: false,
-        add: '<button title="{{ 'year.term.add'|trans({}, 'BusybeeInstituteBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-        remove: '<button title="{{ 'year.term.remove'|trans({}, 'BusybeeInstituteBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+        add: '<button title="{{ 'year.term.add'|trans({}, 'BusybeeCalendarBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+        remove: '<button title="{{ 'year.term.remove'|trans({}, 'BusybeeCalendarBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true
     });
 
