--- a/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/year.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/year.html.twig
@@ -1,6 +1,6 @@
 {# src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig #}
 
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% include '@BusybeeCalendar/Calendar/calendarMenu.html.twig' with {'header': 'calendar.year.title'} %}
 <div class="container-fluid">
