--- a/src/Busybee/Core/CalendarBundle/Resources/views/Grade/edit.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Grade/edit.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% include 'BusybeeCalendarBundle:Calendar:calendarMenu.html.twig' with {'header': 'calendar.grade.title', 'name': form.name.vars.value, 'panelParagraph': 'calendar.help.grades'} %}
 <div class="col-sm-4 col-sm-offset-8">
