--- a/src/Busybee/Core/CalendarBundle/Resources/views/Grade/grade.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Grade/grade.html.twig
@@ -5,9 +5,9 @@
 
 {% block grade_widget %}
     {% spaceless %}
-        {% if form.grade.vars.value is empty %}{% set gradeTitle = 'grade.add.title'|trans %}{% else %}{% set gradeTitle = array_flip(get_setting('student.groups'))[form.grade.vars.value] %}{% endif %}
+        {% if form.grade.vars.value is empty %}{% set gradeTitle = 'grade.add.title'|trans %}{% else %}{% set gradeTitle = get_setting('student.groups._flip')[form.grade.vars.value] %}{% endif %}
         {% set h3Content = '<div class="collection-actions collection-panel">' %}
-        {% set h3Content = h3Content ~ deleteButton({'title': 'grade.remove.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
+        {% set h3Content = h3Content ~ deleteButton({'title': 'grade.remove.title', 'transDomain': 'BusybeeCalendarBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
         {% set h3Content = h3Content ~ saveButton({'name': 'grades'}) %}
         {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
         {% set h3Content = h3Content ~ upDownButton()|raw %}
@@ -16,10 +16,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 well">
-                    {{ dump() }}
                     {{ form_row(form.grade) }}
                     {{ form_row(form.sequence) }}
                     {{ form_row(form.year, {'value': app.request.get('id') }) }}
+                    {{ form_row(form.name) }}
                 </div>
             </div>
         </div>
