--- a/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDaysScript.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDaysScript.html.twig
@@ -4,8 +4,8 @@
         name_prefix: '{{ form.specialDays.vars.full_name }}',
         allow_up: false,
         allow_down: false,
-        add: '<button title="{{ 'year.specialday.add'|trans({}, 'BusybeeInstituteBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-        remove: '<button title="{{ 'year.specialday.remove'|trans({}, 'BusybeeInstituteBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+        add: '<button title="{{ 'year.specialday.add'|trans({}, 'BusybeeCalendarBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+        remove: '<button title="{{ 'year.specialday.remove'|trans({}, 'BusybeeCalendarBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true
     });
 
