--- a/src/Busybee/Core/CalendarBundle/Resources/views/Term/term.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Term/term.html.twig
@@ -1,6 +1,6 @@
 {# src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig #}
 
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% block term_label %}{% endblock %}
 {% block term_errors %}{% endblock %}
@@ -11,7 +11,7 @@
         {% set h3Content = '<div class="collection-actions collection-panel">' %}
         {% set term_id = '0' %}
         {% if form.vars.value is not null %}{% set term_id = form.vars.value.getId() %}{% endif %}
-        {% set h3Content = h3Content ~ deleteButton({'javascript': {'function': 'return removeTerm', 'options': {'id': term_id, 'year': app.request.get('id')}}, 'title': 'term.delete.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
+        {% set h3Content = h3Content ~ deleteButton({'javascript': {'function': 'return removeTerm', 'options': {'id': term_id, 'year': app.request.get('id')}}, 'title': 'term.delete.title', 'transDomain': 'BusybeeCalendarBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
         {% set h3Content = h3Content ~ saveButton({'name': 'terms'}) %}
         {% set h3Content = h3Content ~ '</div>' %}
         {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': termTitle, 'panelStyle': 'info'} %}
