--- a/src/Busybee/Core/CalendarBundle/Resources/views/Year/index.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Year/index.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
+{% trans_default_domain "BusybeeCalendarBundle" %}
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
@@ -20,7 +20,7 @@
     {% if app.request.attributes.get('id') != 'Add' %}{% set h3Content = h3Content ~ addButton({'windowOpen': {'route': path('student_year_edit', {'id': 'Add'})}}) %}{% endif %}
     {% set h3Content = h3Content ~ resetButton() %}
     {% set h3Content = h3Content ~ saveButton() %}
-    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'groups.year.title', 'transDomain': 'BusybeeInstituteBundle'} %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'groups.year.title', 'transDomain': 'BusybeeCalendarBundle'} %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 well">
