--- a/src/Busybee/Core/SystemBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Busybee/Core/SystemBundle/Resources/views/Bundle/list.html.twig
@@ -30,14 +30,31 @@
         {% set h3Content = h3Content ~ miscButton({class: 'btn btn-warning halflings halflings-arrow-up', title: 'bundle.update.allbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_update', {name: 'All'})}}) %}
     {% endif %}
     {% if form.vars.manager.SQLCount > 0 %}
-        {% set h3Content = h3Content ~ miscButton({class: 'btn btn-warning halflings halflings-save', title: 'bundle.update.sqlbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_database_update')}}) %}{{ dump(form.vars.manager.SQLCount) }}
+        {% set h3Content = h3Content ~ miscButton({class: 'btn btn-warning halflings halflings-save', title: 'bundle.update.sqlbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_database_update')}}) %}
     {% endif %}
     {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {header: 'system.bundle.manage.title'|trans, transDomain: 'SystemBundle'} %}
     {% block flashMessages %}
         {% include '@BusybeeTemplate/Default/flash.html.twig' with {transDomain: 'SystemBundle', flashClass: 'fadeAlert'} %}
     {% endblock flashMessages %}
 
+
     {{ form_start(form, {attr: {id: 'bundleForm'}}) }}
+    <div style="max-width: 100%" class="container">
+        <div class="row">
+            <div class="col-sm-6 well">
+                {{ form_row(form.orgSettingFile) }}
+            </div>
+            <div class="col-sm-3 well">
+                {{ form_row(form.orgSettingDefault) }}
+            </div>
+            <div class="col-sm-3 well">
+                <div>
+                    {{ miscButton({class: 'btn btn-warning halflings halflings-erase', title: 'bundles.remove.file', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_default_remove')}})|raw }}
+                    {{ saveButton({class: 'btn btn-success halflings halflings-cloud-upload', title: 'form.upload'})|raw }}</div>
+            </div>
+        </div>
+    </div>
+
     {{ form_widget(form.bundles) }}
     {{ form_end(form) }}
 
@@ -50,7 +67,9 @@
     {% include "@BusybeeTemplate/Scripts/jquery.collection.js.html.twig" %}
     <script>
         $('input:checkbox').change(function () {
-            $("#bundleForm").submit();
+            if (!$(this).hasClass('noSubmit')) {
+                $("#bundleForm").submit();
+            }
         });
     </script>
 {% endblock %}
