--- a/src/Busybee/TimeTableBundle/Resources/views/Display/index.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}{{ manager.title|trans }}{% endblock title %}
 {% block headerTitle %}{{ manager.title|trans }}{% endblock headerTitle %}
-{% block headerLead %}{{ manager.description|trans({'%type%': manager.type, '%identifier%': manager.idDesc}) }}{% endblock headerLead %}
+{% block headerLead %}{{ '<span id="tt_Desc">&nbsp;</span>' }}{% endblock headerLead %}
 
 {% block contentContainer %}
     <div id="displayTimeTable">
