--- a/src/Busybee/TimeTableBundle/Resources/views/Display/selectDate.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/selectDate.html.twig
@@ -20,6 +20,9 @@
             type: 'POST',
             success: function (data) {
                 $('#displayTimeTable').html(data['content']);
+                if ($("#tt_Desc").length > 0) {
+                    $("#tt_Desc").html(data['description']);
+                }
             }
         });
     }
