--- a/src/Busybee/InstituteBundle/Resources/views/Department/courseCollection.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Department/courseCollection.html.twig
@@ -4,18 +4,21 @@
 {% block _department_courses_entry_error %}{% endblock %}
 
 {% block _department_courses_entry_widget %}
-
+    {% spaceless %}
     {% set panelStyle = 'default' %}
     {% set transDomain = 'BusybeeInstituteBundle' %}
     {% set header = 'department.course.member' %}
-
+        {% set courseName = {'%name%': 'department.course.name.placeholder'|trans} %}
+        {% if data is not empty %}
+            {% set courseName = {'%name%': data.name} %}
+        {% endif %}
     {% set h3Content = '<div class="collection-actions collection-panel">' %}
-    {% set h3Content = h3Content ~ deleteButton({'title': 'department.course.remove', 'transDomain': 'BusybeeInstituteBundle', 'class': 'collection-remove collection-action halflings halflings-erase btn btn-warning'})|raw %}
+        {% set h3Content = h3Content ~ deleteButton({title: 'department.course.remove', transDomain: 'BusybeeInstituteBundle', class: 'collection-remove collection-action halflings halflings-erase btn btn-warning'})|raw %}
     {% set h3Content = h3Content ~ saveButton()|raw %}
     {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
     {% set h3Content = h3Content ~ '</div>' %}
 
-    {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {'panelStyle': 'default', 'name': 'Couse'} %}
+        {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {'panelStyle': 'default', name: courseName} %}
     <div class="container-fluid departmentCourse">
         <div class="row">
             <div class="col-sm-12">
@@ -25,4 +28,5 @@
         </div>
     </div>
     {% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
+    {% endspaceless %}
 {% endblock _department_courses_entry_widget %}
